--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,6 +10,12 @@
     <%= f.label :description %>
     <%= f.text_area :description, rows: 5 %>
     <br/>
+
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+        <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+    <% end %>
+    <br/>
     <%= f.submit (@post.new_record? ? "Create Post" : "Update Post"), class: 'btn btn-primary' %>
   <% end %>
 </div>
+
