--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,34 @@
-<p class='pull-right'>
-  [<%= link_to 'edit this post', edit_post_path(@post) %>]
-</p>
+<% if logged_in? %>
+  <p class='pull-right'>
+    [<%= link_to 'edit this post', edit_post_path(@post) %>]
+  </p>
+<% end %>
 <p>
   <%= render @post.categories%>
 </p>
 
 <%= render 'shared/content_title' ,title: @post.title%>   <!-- without underscore!! -->
 
-<%= render 'shared/errors_display', obj: @comment %>
 <p>
 <%= @post.description %><hr/>
 </p>
 
-<h5>Create a comment:</h5>
-<%= form_for [@post, @comment]  do |f| %> <!-- short-cut, the first obj (parent object) has to be existed and the second one has to be new. Remember nested
-e.g. /post/3/comments -->
-  <%= f.text_area :body %>
-  <br/>
-  <%= f.submit "Create Comment", class: "btn btn-primary" %>
+<% if logged_in? %>
+  <%= form_for [@post, @comment]  do |f| %> <!-- short-cut, the first obj (parent object) has to be existed and the second one has to be new. Remember nested
+  e.g. /post/3/comments -->
+  <%= render 'shared/errors_display', obj: @comment %>
+    <div class='control-group'>
+    <%= f.label :body, 'Leave a comment:'%>
+    <%= f.text_area :body , rows: 3, class: 'span4'%>
+    <br/>
+    </div>
+    <%= f.submit "Create Comment", class: "btn btn-primary" %>
+  <% end %>
 <% end %>
+<h5>Comments:</h5>
+<% @post.comments.each do |comment| %>
+  <%= render 'comments/comment', comment: comment %>
+<% end %>
+
 
 <%= link_to 'go back to all posts', posts_path %>
