--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,15 +1,16 @@
 <div class="row">
   <div class='span0 well text-center'>
     <% if logged_in? %>
-      <%= link_to vote_post_path(post, vote: true), method:'post' do %>
+      <%= link_to vote_post_path(post, vote: true), method:'post', remote: true do %>
         <i class='icon-arrow-up' ></i>
       <% end %>
       <br/>
     <% end %>
-    <%= post.total_votes %> <%= (post.total_votes >1 || post.total_votes <-1) ? "votes" : "vote" %>
+    <span id='post_<%= post.slug %>_votes'><%= display_votes(post.total_votes) %></span>
+    
     <% if logged_in? %>
       <br/>
-      <%= link_to vote_post_path(post, vote: false), method:'post' do %>
+      <%= link_to vote_post_path(post, vote: false), method:'post', remote: true do %>
         <i class='icon-arrow-down' ></i>
       <% end %>
     <% end %>    
