--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 <% end %>
 <h5>Comments:</h5>
-<% @post.comments.sort_by{|comment| comment.total_votes}.reverse.each do |comment| %>
+<% @post.reload.comments.sort_by{|comment| comment.total_votes}.reverse.each do |comment| %>
   <%= render 'comments/comment', comment: comment %>
 <% end %>
 
