--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
 
 <div class='well'>
 <d1 class='dl-horizontal'>
-<dt>Usernaame: </dt>
+<dt>Username: </dt>
 <dd><%= @user.username %></dd>
+<dt>Time zone: </dt>
+<dd><%= @user.time_zone %></dd>
 </d1>
 </div>
 
