--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,8 @@
 <% show_post ||= false %> <!-- It is like a deafult setting of false -->
 <div class='row'>
+  <div id="comment_<%= comment.id %>_votes_error" class='alert alert-error span12' style='display :none'>
+    You can only vote once on a comment
+  </div> 
   <div class='span0 well text-center'>
     <% if logged_in? %>
       <%= link_to vote_post_comment_path(comment.post, comment, vote:true), method: 'post' ,remote: true do %>
