--- a/app/views/comments/vote.js.erb
+++ b/app/views/comments/vote.js.erb
@@ -1,5 +1,5 @@
 <% if @vote.valid? %>
-$('#comment_<%= @comment.id %>_votes').html('<%= display_votes(@comment.total_votes) %>');
+  $('#comment_<%= @comment.id %>_votes').html('<%= display_votes(@comment.total_votes) %>');
 <% else %>
-  alert('U cant vote twice');
+  $('#comment_<%= @comment.id %>_votes_error').show()
 <% end %>
