--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
   <% Category.all.each do |category| %>
     <li><%= link_to category.name, category_path(category) %></li>
   <% end %>
-  <% if logged_in? %>
+  <% if logged_in?&&current_user.admin? %>
     <li class='divider' ></li>
     <li>
       <%= link_to new_category_path do %>
@@ -27,10 +27,6 @@
   <div class='nav_item'>
     <%= link_to 'New Post', new_post_path, class:'btn btn-success btn-small' %>
   </div>
-  <div class='nav_item'>
-    <%= link_to 'Log out', logout_path, class: 'btn btn-small' %>
-  </div>
-
     <div class='btn-group nav_item'>
     <%= link_to('', class:'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
     <%= current_user.username %><span class='caret'></span>
