--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <div id="post_<%= post.slug %>_votes_error" class='alert alert-error span12' style='display :none'>
     You can only vote once on a post
   </div>  
-  <div class='span0 well text-center'>
+  <div class='span0 well text-center' style="width:60px">
     <% if logged_in? %>
       <%= link_to vote_post_path(post, vote: true), method:'post', remote: true do %>
         <i class='icon-arrow-up' ></i>
